--- a/app/views/volunteers/new.html.erb
+++ b/app/views/volunteers/new.html.erb
@@ -1,2 +1,4 @@
-<h2 align="center">Crear Volunteer</h2>
+<nav class="navbar navbar-light bg-light">
+  <a class="nav-link">Crear Volunteer</a>
+</nav>
 <%= render 'volunteers/partials/form' %>
