--- a/app/views/crew_leaders/new.html.erb
+++ b/app/views/crew_leaders/new.html.erb
@@ -1,2 +1,4 @@
-<h2 align="center">Crear Crew Leader</h2>
+<nav class="navbar navbar-light bg-light">
+  <a class="nav-link">Crear Crew Leader</a>
+</nav>
 <%= render 'crew_leaders/partials/form' %>
