--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,4 +1,7 @@
-<h2>Hijos de <%= @parent.first_name %> <%= @parent.last_name %></h2>
+<nav class="navbar navbar-light bg-light">
+  <a class="nav-link">Hijos de <%= @parent.first_name %> <%= @parent.last_name %></a>
+</nav>
+<br>
 <div class="table-responsive-sm">
   <table class="table">
     <thead class="thead-light">
@@ -13,7 +16,7 @@
     </tr>
     </thead>
     <tbody>
-      <% @parent.children.each do |child| %> 
+      <% @parent.children.each do |child| %>
         <tr>
           <td><%= link_to child.first_name, child %></td>
           <td><%= child.last_name %></td>
@@ -24,9 +27,9 @@
           </td>
           <td>
               <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
-          </td> 
+          </td>
         </tr>
-      <% end %> 
+      <% end %>
     </tbody>
   </table>
 </div>
@@ -41,7 +44,7 @@
           <div class="form-group">
             <%= f.label :Nombres %>
             <%= f.text_field :first_name, class: "form-control" %>
-          </div> 
+          </div>
           <div class="form-group">
             <%= f.label :Apellidos %>
             <%= f.text_field :last_name, class: "form-control" %>
@@ -57,7 +60,7 @@
           <div class="form-group">
             <%= f.label :EPS %>
             <%= f.text_field :health_provider, class: "form-control" %>
-          </div> 
+          </div>
           <%= f.submit class: "btn btn-info" %>
       </div>
     <% end %>
