add unique navbar to each view

--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -1,2 +1,5 @@
-<h2 align="center">Editar Niño</h2>
+<nav class="navbar navbar-light bg-light">
+  <a class="nav-link">Editar Niño</a>
+</nav>
+<br>
 <%= render 'children/partials/form' %>
