--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -37,7 +37,7 @@
 <br>
 
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-6 offset-sm-3">
     <h2>Agregar Hijo</h2>
     <%= form_for [@parent, @parent.children.build] do |f| %>
       <div class="form-group">
