--- a/app/views/parents/edit.html.erb
+++ b/app/views/parents/edit.html.erb
@@ -1,2 +1,4 @@
-<h2 align="center">Editar Padre</h2>
+<nav class="navbar navbar-light bg-light">
+  <a class="nav-link">Editar Padre</a>
+</nav>
 <%= render 'parents/partials/form' %>
