--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
-<h2 align="center">Sign up</h2>
+<nav class="navbar navbar-light bg-light">
+  <a class="nav-link">Sign Up</a>
+</nav>
+<br>
 <div class="row">
   <div class="col-sm-6 offset-sm-3">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
