--- a/app/views/parents/partials/_form.html.erb
+++ b/app/views/parents/partials/_form.html.erb
@@ -1,16 +1,18 @@
 <br>
 <%= render 'shared/errors', obj: @parent %>
-<div class="row">
-  <div class="col-sm-6 offset-sm-3">
-    <%= form_for @parent do |f| %>
 
-      <div class="form-group">
-        <%= f.label :Nombres %>
-        <%= f.text_field :first_name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Apellidos %>
-        <%= f.text_field :last_name, class: "form-control" %>
+<div class="row">
+  <div class="col-sm-10 offset-sm-1">
+    <%= form_for @parent do |f| %>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Nombres %>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Apellidos %>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
       </div>
       <div class="form-group">
         <%= f.label :Email %>
@@ -20,13 +22,15 @@
         <%= f.label :Teléfono %>
         <%= f.text_field :phone, class: "form-control" %>
       </div>
-      <div class="form-group">
-        <%= f.label :Iglesia %>
-        <%= f.text_field :church, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Valor_cancelado %>
-        <%= f.number_field :amount_paid, class: "form-control" %>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Iglesia %>
+          <%= f.text_field :church, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Valor_cancelado %>
+          <%= f.number_field :amount_paid, class: "form-control" %>
+        </div>
       </div>
       <%= f.submit class: "btn btn-info" %>
     <% end %>
