divide forms for better user experience

--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -10,22 +10,22 @@
                   </a>
                 </li>
                 <li>
-                    <%= link_to "Padres", parents_path, class: "nav-link" %>
+                    <%= link_to "Listar Padres", parents_path, class: "nav-link" %>
                 </li>
                 <li>
                     <%= link_to "Crear Padre", new_parent_path, class: "nav-link" %>
                 </li>
                 <li>
-                    <%= link_to "Niños", children_path, class: "nav-link" %>
+                    <%= link_to "Listar Niños", children_path, class: "nav-link" %>
                 </li>
                 <li>
-                    <%= link_to "Crew Leaders", crew_leaders_path, class: "nav-link" %>
+                    <%= link_to "Listar Crew Leaders", crew_leaders_path, class: "nav-link" %>
                 </li>
                 <li>
                     <%= link_to "Crear Crew Leader", new_crew_leader_path, class: "nav-link" %>
                 </li>
                 <li>
-                    <%= link_to "Volunteers", volunteers_path, class: "nav-link" %>
+                    <%= link_to "Listar Volunteers", volunteers_path, class: "nav-link" %>
                 </li>
                 <li>
                     <%= link_to "Crear Volunteer", new_volunteer_path, class: "nav-link" %>
