--- a/app/views/crew_leaders/partials/_form.html.erb
+++ b/app/views/crew_leaders/partials/_form.html.erb
@@ -1,27 +1,33 @@
 <br>
 <%= render 'shared/errors', obj: @crew_leader %>
 <div class="row">
-  <div class="col-sm-6 offset-sm-3">
+  <div class="col-sm-10 offset-sm-1">
     <%= form_for @crew_leader do |f| %>
-      <div class="form-group">
-        <%= f.label :Nombres %>
-        <%= f.text_field :first_name, class: "form-control" %>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Nombres %>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Apellidos %>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
       </div>
-      <div class="form-group">
-        <%= f.label :Apellidos %>
-        <%= f.text_field :last_name, class: "form-control" %>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Email %>
+          <%= f.email_field :email, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Teléfono %>
+          <%= f.text_field :phone, class: "form-control" %>
+        </div>
       </div>
-      <div class="form-group">
-        <%= f.label :Email %>
-        <%= f.email_field :email, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Teléfono %>
-        <%= f.text_field :phone, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Iglesia %>
-        <%= f.text_field :church, class: "form-control" %>
+      <div class="form-row">
+        <div class="form-group col-md-12">
+          <%= f.label :Iglesia %>
+          <%= f.text_field :church, class: "form-control" %>
+        </div>
       </div>
       <%= f.submit class: "btn btn-info" %>
     <% end %>
