--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -37,32 +37,35 @@
 <br>
 
 <div class="row">
-  <div class="col-sm-6 offset-sm-3">
+  <div class="col-sm-10 offset-sm-1">
     <h2>Agregar Hijo</h2>
     <%= form_for [@parent, @parent.children.build] do |f| %>
-      <div class="form-group">
-          <div class="form-group">
-            <%= f.label :Nombres %>
-            <%= f.text_field :first_name, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :Apellidos %>
-            <%= f.text_field :last_name, class: "form-control" %>
-          </div>
-          <div class="form-group">
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Nombres %>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Apellidos %>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-row">
+          <div class="form-group col-md-2">
             <%= f.label :edad %>
             <%= f.number_field :age, class: "form-control" %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-md-5">
             <%= f.label :Tarjeta_de_identidad %>
             <%= f.number_field :identification, class: "form-control" %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-md-5">
             <%= f.label :EPS %>
             <%= f.text_field :health_provider, class: "form-control" %>
           </div>
-          <%= f.submit class: "btn btn-info" %>
-      </div>
+        </div>
+        <%= f.submit class: "btn btn-info" %>
     <% end %>
   </div>
 </div>
+<br>
