--- a/app/views/volunteers/partials/_form.html.erb
+++ b/app/views/volunteers/partials/_form.html.erb
@@ -1,41 +1,48 @@
 <br>
 <%= render 'shared/errors', obj: @volunteer %>
 <div class="row">
-  <div class="col-sm-6 offset-sm-3">
+  <div class="col-sm-10 offset-sm-1">
     <%= form_for @volunteer do |f| %>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Nombres %>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Apellidos %>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :Email %>
+          <%= f.email_field :email, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :Teléfono %>
+          <%= f.text_field :phone, class: "form-control" %>
+        </div>
+      </div>
 
-      <div class="form-group">
-        <%= f.label :Nombres %>
-        <%= f.text_field :first_name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Apellidos %>
-        <%= f.text_field :last_name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Email %>
-        <%= f.email_field :email, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Teléfono %>
-        <%= f.text_field :phone, class: "form-control" %>
-      </div>
       <div class="form-group">
         <%= f.label :Iglesia %>
         <%= f.text_field :church, class: "form-control" %>
       </div>
-      <div class="form-group">
-        <%= f.label :edad %>
-        <%= f.number_field :age, class: "form-control" %>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+          <%= f.label :edad %>
+          <%= f.number_field :age, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-4">
+          <%= f.label :identificación %>
+          <%= f.number_field :identification, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= f.label :rol %>
+          <%= f.select(:role_type, Volunteer.role_types.keys.map {|role| [role.titleize,role]}, {prompt: "Selecciona el Rol"}, {class: "form-control"}) %>
+        </div>
       </div>
-      <div class="form-group">
-        <%= f.label :identificación %>
-        <%= f.number_field :identification, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :selecciona_rol %>
-        <%= f.select(:role_type, Volunteer.role_types.keys.map {|role| [role.titleize,role]}, {prompt: "Selecciona el Rol"}, {class: "form-control"}) %>
-      </div>
+
       <%= f.submit class: "btn btn-info" %>
     <% end %>
   </div>
